--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "private": true,
   "devDependencies": {
+    "prisma": "^5.7.1",
     "tsc-watch": "^6.0.4",
     "typescript": "^5.3.3"
   },
@@ -12,7 +13,11 @@
     "build": "tsc -p ."
   },
   "dependencies": {
+    "@prisma/client": "^5.7.1",
+    "@types/node": "^20.10.6",
     "ioredis": "^5.3.2",
-    "socket.io": "^4.7.2"
+    "socket.io": "^4.7.2",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.3.3"
   }
 }
